--- a/services/django-auth/pyproject.toml
+++ b/services/django-auth/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "hypothesis>=6.151.5",
     "openpyxl>=3.1.5",
     "pandas>=3.0.0",
+    "pydantic[email]>=2.12.5",
     "pytest>=9.0.2",
     "pytest-django>=4.11.1",
     "python-dotenv>=1.2.1",
